Again Security config changes